# GenericContainersAndAlgorithms

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
output/: data.csv  dict.txt  find.txt  list.txt  vector.txt  vector_heap.txt  vector_insertion.txt  vector_quick.txt
src/: AlgoDict.h  AlgoList.h  AlgoListNode.h  AlgoStack.h  AlgoVector.h  Algorithm.h  DataGen.cpp  DataGen.h  Driver.cpp  Driver.h  main.cpp
test/: datasets.csv  input.txt  input_big.txt
writeup/: Writeup.docx  data.xlsx
